--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=u526107821_dsimi
-DB_USERNAME=u526107821_dsimi
-DB_PASSWORD="#mxStWM7Lb*8"
+DB_USERNAME=root
+DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
