--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=u526107821_dsimi
+DB_DATABASE=hrsystemnew
 DB_USERNAME=root
-DB_PASSWORD=""
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
